--- a/Biblioteka/Web.config
+++ b/Biblioteka/Web.config
@@ -13,6 +13,8 @@
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
+    <add key="authorPhotos" value="/img/photos/"/>
+    <add key ="bookCovers" value ="/img/covers/"/>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
