--- a/Biblioteka/Biblioteka.csproj
+++ b/Biblioteka/Biblioteka.csproj
@@ -185,7 +185,6 @@
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\BookViewModel.cs" />
     <Compile Include="Models\CombinedDataModels.cs" />
-    <Compile Include="Models\Database.cs" />
     <Compile Include="Models\Data_Models\Authors.cs" />
     <Compile Include="Models\Data_Models\Books.cs" />
     <Compile Include="Models\Data_Models\Book_Authors.cs" />
@@ -193,6 +192,7 @@
     <Compile Include="Models\Data_Models\Book_Series.cs" />
     <Compile Include="Models\Data_Models\Genres.cs" />
     <Compile Include="Models\Data_Models\Series.cs" />
+    <Compile Include="Models\Data_Models\User_Books.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
