--- a/Biblioteka/Views/Web.config
+++ b/Biblioteka/Views/Web.config
@@ -34,9 +34,10 @@
   </system.webServer>
 
   <system.web>
+    <globalization culture="pl-PL" uiCulture="pl"/>
     <compilation>
       <assemblies>
-        <add assembly="System.Web.Mvc, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+        <add assembly="System.Web.Mvc, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />  
       </assemblies>
     </compilation>
   </system.web>
