--- a/Biblioteka/packages.config
+++ b/Biblioteka/packages.config
@@ -6,15 +6,39 @@
   <package id="jQuery" version="1.10.2" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Identity.Core.pl" version="2.2.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNetCore.Authentication" version="1.1.0" targetFramework="net452" />
+  <package id="Microsoft.AspNetCore.Authentication.Cookies" version="1.1.0" targetFramework="net452" />
+  <package id="Microsoft.AspNetCore.Cryptography.Internal" version="1.1.0" targetFramework="net452" />
+  <package id="Microsoft.AspNetCore.Cryptography.KeyDerivation" version="1.1.0" targetFramework="net452" />
+  <package id="Microsoft.AspNetCore.DataProtection" version="1.1.0" targetFramework="net452" />
+  <package id="Microsoft.AspNetCore.DataProtection.Abstractions" version="1.1.0" targetFramework="net452" />
+  <package id="Microsoft.AspNetCore.Hosting.Abstractions" version="1.1.0" targetFramework="net452" />
+  <package id="Microsoft.AspNetCore.Hosting.Server.Abstractions" version="1.1.0" targetFramework="net452" />
+  <package id="Microsoft.AspNetCore.Http" version="1.1.0" targetFramework="net452" />
+  <package id="Microsoft.AspNetCore.Http.Abstractions" version="1.1.0" targetFramework="net452" />
+  <package id="Microsoft.AspNetCore.Http.Extensions" version="1.1.0" targetFramework="net452" />
+  <package id="Microsoft.AspNetCore.Http.Features" version="1.1.0" targetFramework="net452" />
+  <package id="Microsoft.AspNetCore.Identity" version="1.1.0" targetFramework="net452" />
+  <package id="Microsoft.AspNetCore.WebUtilities" version="1.1.0" targetFramework="net452" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net452" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="1.1.0" targetFramework="net452" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="1.1.0" targetFramework="net452" />
+  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="1.1.0" targetFramework="net452" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="1.1.0" targetFramework="net452" />
+  <package id="Microsoft.Extensions.ObjectPool" version="1.1.0" targetFramework="net452" />
+  <package id="Microsoft.Extensions.Options" version="1.1.0" targetFramework="net452" />
+  <package id="Microsoft.Extensions.Primitives" version="1.1.0" targetFramework="net452" />
+  <package id="Microsoft.Extensions.WebEncoders" version="1.1.0" targetFramework="net452" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net452" developmentDependency="true" />
+  <package id="Microsoft.Net.Http.Headers" version="1.1.0" targetFramework="net452" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net452" />
@@ -26,8 +50,11 @@
   <package id="Microsoft.Owin.Security.Twitter" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.6.2" targetFramework="net452" />
+  <package id="NETStandard.Library" version="1.6.1" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
+  <package id="System.Buffers" version="4.3.0" targetFramework="net452" />
+  <package id="System.Text.Encodings.Web" version="4.3.0" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
 </packages>
